# python-sscha

./: .gitignore  CONTRIBUTING.md  README.md  README.rst  meson.build  meson.build.old2  meson.build.sscha  meson.options  old_setup.py  pyproject.toml  pytest.ini  python-sscha Installation Guide.md  requirements.txt  requirements2.txt  setup.py
.github/workflows/: build.yml  python-testsuite.yml
CModules/: LanczosFunctions.c  LanczosFunctions.h  odd_corr_module.c
Examples/AutomaticCalculator/: auto_run.py
Examples/AutomaticFixedCellOptimization/: TestRelax.py  full_relax.in
Examples/AutomaticVariableCellOptimization/: CP2K_toy_model_calculator.py  vc_relax.py
Examples/ClusterConnectionExample/: connect_to_marconi.py  irene.in  marconi.in  submit_locally.py
Examples/ComputeFreeEnergyHessian/: compute_hessian_example.py
Examples/GenerateEnsemble/: generate_ensemble.py
Examples/LanczosGreenFunction/: ice_test.py
Examples/LockModes/: script_mode_locking.py
Examples/OptimizationWithFixedAtoms/: fix_atoms.py
Examples/OptimizationWithFixedPhonons/: script_mode_locking.py  simple_mode_locking.in
Examples/Relax/: CP2K_toy_model_calculator.py  TestRelax.py
Examples/SimpleExample/: example.py  simple_input.in
Examples/SimpleVcRelax/: simple_input.in  vc_relax_no_automatic_submission.py
Examples/TestBFGS/: TestBFGSOptimizer.py  TestInvertPressure.py
Examples/TestClusterConnection/: irene.in  marconi.in
Examples/TestDynamicalBubble/: _test_dynamical_bubble.py  compute_raman.py  dynamical_bubble.py
Examples/TestFCPrecondition/: test_Lambda_matrix.py
Examples/TestFortranPythonGradient/: lambda_multiply_fort_vs_py.py  test_fortran_vs_python_gradient.py  upsilon_fotran_vs_py.py
Examples/TestGenerateEnsembleSupercell/: test_generate_ensemble.py
Examples/TestGradient/: TestGradientDynmat.py  TestGradientEnsemble.py  dyn_harmonic
Examples/TestGradientWyckoff/: minimize_wyckoff.py
Examples/TestLanczosFiniteTemperature/: dyn_gen_pop1_1  dyn_gen_pop1_2  dyn_gen_pop1_3  energies_pop1.npy  forces_pop1.npy  test_Lanczos_1d.py  xats_pop1.npy
Examples/TestLockModes/: simple_mode_locking.in
Examples/TestMarconi/: cluster.in  cluster_marconi.py
Examples/TestMinimization/: TestMinimization.py  harmonic_toy_model.py  start_dyn
Examples/TestOdd3/: hessian_test.py  test_odd3_calculation.py
Examples/TestReweighting/: final_dyn1  get_sum_rho.py  super_final1
Examples/TestUpsilon/: TestUpsilonMatrix.py  dyn_start
Examples/TestWyckPrecond/: test_precond.py
Examples/ThermodynamicsOfGold/: Au.cif  get_gold_free_energy.py  plot_dispersion.py  plot_thermal_expansion.py  thermal_expansion.py
Examples/VC_RELAX/: CP2K_toy_model_calculator.py  topology_fist_WAT.psf  vc_relax.py
Examples/ensemble_data_test/: db_full_T10000_s0.out  dyn1  dyn_population2_1  eigenvalues  test_polarization_vectors  test_polarization_vectors_q
Examples/sscha_and_aiida/: README.md  Si-dynamical-matrix1  Si-dynamical-matrix2  Si-dynamical-matrix3  Si.pwi  clean_runs.sh  dataset-sscha.xyz  flare_config.yaml  model.json  qha.py  run_aiida_flare_sscha.py  run_aiida_sscha.py  run_flare_sscha.py  submit.sh
Examples/sscha_and_dft/: Au_ONCV_PBE-1.0.oncvpsp.upf  nvt_local.py  start_dyn1  start_dyn10  start_dyn11  start_dyn12  start_dyn13  start_dyn2  start_dyn3  start_dyn4  start_dyn5  start_dyn6  start_dyn7  start_dyn8  start_dyn9
Modules/: AdiabaticIntegral.py  AdvancedCalculations.py  Calculator.py  Cluster.py  Dynamical.py  DynamicalLanczos.py  Ensemble.py  JuliaExt.py  LocalCluster.py  Minimizer.py  Optimizer.py  Parallel.py  Relax.py  SchaMinimizer.py  Thermodynamics.py  Tools.py  Utilities.py  __init__.py  aiida_ensemble.py  fourier_gradient.jl  juliapkg.json
Modules/ml/: __init__.py  flare.py
SCHAModules/: cell_force.f90  get_cmat.f90  get_emat.f90  get_g.f90  get_gradient_supercell.f90  get_gradient_supercell_fast.f90  get_odd_straight.f90  get_odd_straight_with_v4.f90  get_stress_tensor.f90  get_upsilon_matrix.f90  get_v3.f90  get_v4.f90  module_anharmonic.f90  module_harmonic.f90  module_new_thermodynamic.f90  module_polarization.f90  module_stochastic.f90  multiply_lambda_tensor.f90  unwrap_ensemble.f90
Tutorials/H3S/: Automatic_Calculations.ipynb  get_phonons.py  matdyn0  matdyn1  matdyn2  matdyn3
Tutorials/LaH10/: H.pbe-rrkjus_psl.1.0.0.UPF  La.pbe-spfn-rrkjus_psl.1.0.0.UPF  VariableCellRelaxation.ipynb  dyn1
Tutorials/PbTe/: Automatic_Calculations.ipynb  PbTe.cif  StructuralInstability.ipynb  Tutorial_PbTe.ipynb  plot_fe.py  start_dyn1  start_dyn2  start_dyn3  tutorial_spectral.ipynb
Tutorials/SnSe_ToyModel/: SnSe.ipynb  ffield_dynq2  ffield_dynq3  final_sscha_T0_1  final_sscha_T100_1  final_sscha_T150_1  final_sscha_T150_2  final_sscha_T150_3  final_sscha_T200_1  final_sscha_T200_2  final_sscha_T200_3  final_sscha_T250_1  final_sscha_T250_2  final_sscha_T250_3  final_sscha_T300_1  final_sscha_T300_2  final_sscha_T300_3  final_sscha_T50_2  hessian1  hessian2  hessian3  hessian_T100_2  hessian_T150_1  hessian_T150_2  hessian_T150_3  hessian_T200_1  hessian_T200_2  hessian_T200_3  hessian_T250_1  hessian_T250_2  hessian_T250_3  hessian_T300_1  hessian_T300_2  hessian_T300_3  hessian_T50_3
Tutorials/SnTe_ToyModel/: SnSe.ipynb  ffield_dynq1  final_sscha_T0_2  final_sscha_T0_3  final_sscha_T100_2  final_sscha_T100_3  final_sscha_T150_1  final_sscha_T150_2  final_sscha_T250_1  final_sscha_T300_2  final_sscha_T50_1  final_sscha_T50_3  hessian_T100_1  hessian_T100_3  hessian_T150_1  hessian_T200_3  hessian_T250_1  hessian_T250_3  hessian_T300_1  hessian_T300_2  hessian_T300_3  hessian_T50_1  hessian_T50_2
UserGuide/: Makefile  advanced.rst  apireference.rst  conf.py  faq.rst  index1.rst  install.rst  intro.rst  start.rst
UserGuide/_static/: about.html
docker/: Dockerfile  Dockerfile.conda  Dockerfile.freeenergy  README.md  Singularity.def  entrypoint-freeenergy.sh
scripts/: cluster_check.x  plot_frequencies.py  plot_frequencies.pyx  plot_lanczos_convergence.py  read_incomplete_ensemble.py  sscha  sscha-plot-data.py  static-vc-relax.pyx
tests/: conftest.py
(+220 files in other folders)
