[build-system]
requires = ["meson-python>=0.13.0", "meson>=1.1.0", "numpy>=1.20.0", "cellconstructor","meson-python"]
build-backend = "mesonpy"

[project]
name = "python-sscha"
version = "1.5.0"
description = "Python implementation of the sscha code"
authors = [{name = "Lorenzo Monacelli"}] # Put here email
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8,<=3.12" # Updated to specify Python 3.8 to 3.12
dependencies = [
    "numpy",
    "ase",
    "scipy",
    "cellconstructor",
    "spglib",
    "matplotlib",
    # mpi4py y pypar are optional and are handled at runtime/configuration
]
# If you have scripts that you want to be installed and executable
# entries = { scripts = ["scripts/sscha", "scripts/cluster_check.x", ...] }
# However, Meson is better at handling scripts like install_data

[project.urls]
Homepage = "https://sscha.eu/"
Repository = "https://github.com/SSCHAcode/python-sscha"
# Documentation = "https://documentacion.readthedocs.io/"
Issues = "https://github.com/SSCHAcode/python-sscha/issues"

# --- Meson-python specific configuration (Optional but useful) ---
[tool.meson-python]
# Here you can pass options to Meson that control the build process.
# For example, to enable debugging or specify a different installation path.
# By default, meson-python takes care of using the virtual environment if it exists.

# build-args = ["-Dbuildtype=debug"] # Uncomment for a debug build
# setup-args = ["--prefix=/opt/python-sscha"] # For a non-standard installation
